--- a/notes/methods_positional_associative.org
+++ b/notes/methods_positional_associative.org
@@ -1,6 +1,8 @@
 * .^methods>>.name
 
+|------------------+--------------------|
 | Associative      | Positional         |
+| (Hash)           | (Array)            |
 |------------------+--------------------|
 | ACCEPTS          | ACCEPTS            |
 | ASSIGN-KEY       |                    |
