--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -44,7 +44,7 @@ It's also a simple rule that works consistently with
 ***** camelcase lovers: Suzana Ezquina ("easier to type")
 ***** kebabcase: Fernando Correa, JJ Atria
 ****** There's nothing fundamentally interesting about this debate
-****** Except the fact that it exists.
+Except the fact that it exists.
 
 **** "keyboard noise people" is my new band name
 
