--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -17,7 +17,7 @@
 ****** doublemap, deepcross, treereduce...?  (( any excuse for doublecross? ))
 ****** One way: collapse paths to compound keys, then use Mix math
 ****** also, what about custom data-container classes? 
-******* (could be D::M isn't so relevant?)
+******* (could be Data::Math approach isn't so relevant?)
 
 *** a fat rakudo weekly:
 https://rakudoweekly.blog/2021/06/14/2021-24-missing/
