--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -19,7 +19,7 @@
 ****** also, what about custom data-container classes? 
 ******* (could be Data::Math approach isn't so relevant?)
 
-*** a fat rakudo weekly:
+*** there's a fat rakudo weekly:
 https://rakudoweekly.blog/2021/06/14/2021-24-missing/
 
 *** bits from the conference in the clouds (CinC):
