--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -22,7 +22,7 @@
 *** last rakudo weekly had a bunch of stuff:
 https://rakudoweekly.blog/2021/06/14/2021-24-missing/
 
-*** bits from the conference in the clouds (CinC -- pronounced "sink"):
+*** bits from the conference in the clouds (CinC -- pronounced "sink"/"sync"):
 
 **** Rop
 From Bruce Gray : Least favorite meta-operator: Rop
