--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -1,8 +1,8 @@
 * meeting notes June 20, 2021
 ** stuff
-*** jeff, interested in new work on immutable data structures (post by daniel?)
+*** jeff: interested in new work on immutable data structures (post by daniel?)
 
-*** bills stackexchange posts
+*** bill stackexchange posts:
 13:33:09	 From Bill Michels : https://unix.stackexchange.com/a/654184/227738
 13:35:04	 From Bill Michels : https://unix.stackexchange.com/a/654444/227738
 13:38:35	 From Bill Michels : https://unix.stackexchange.com/a/654467/227738
