--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -7,11 +7,12 @@
 13:35:04	 From Bill Michels : https://unix.stackexchange.com/a/654444/227738
 13:38:35	 From Bill Michels : https://unix.stackexchange.com/a/654467/227738
 
-*** david: has a perl utility he wants to talk about
+*** david: has a perl utility he wants to talk about (next meeting?)
 
 *** deepmap
 **** basics
 **** turned up bug: a bad condition can mangle the returned structure
+**** 
 
 
 *** Doing the Data::Map job in raku
