--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -2,7 +2,7 @@
 ** stuff
 *** jeff implenting rpn syntax in raku
 **** grammar
-**** difficulties with prefix operators with more than one argument
+**** bruce gray reports difficulties with prefix operators with more than one argument
 *** jeff: interested in new work on immutable data structures (post by daniel?)
 
 *** bill stackexchange posts:
