--- a/notes/raku_data_math-01-methods_positional_associative.org
+++ b/notes/raku_data_math-01-methods_positional_associative.org
@@ -1,4 +1,7 @@
 * distunguishing positional and associative types
+** smart-match against Positional or Associative (checking for a role)
+*** this is easier than I thought, which is why I investigated the following.
+
 ** .^methods>>.name
 
 |------------------+--------------------|
