--- a/notes/meeting_2021jul11.org
+++ b/notes/meeting_2021jul11.org
@@ -4,4 +4,5 @@
 **** /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021mar28/program_location.raku
 **** Q: how to get that to work with "use lib"
 ***** BEGIN?
-
+*** working towards a Data::Math for raku
+**** /home/doom/End/Cave/DataMathRaku/Wall/Data-MapDual/lib/Data/Qualify.rakumod
