--- a/notes/meeting_2021jul11.org
+++ b/notes/meeting_2021jul11.org
@@ -8,3 +8,4 @@
 **** /home/doom/End/Cave/DataMathRaku/Wall/Data-MapDual/lib/Data/Qualify.rakumod
 **** /home/doom/End/Cave/DataMathRaku/Wall/Data-MapDual/t/01-qualify_dyad.t
 **** /home/doom/End/Cave/DataMathRaku/Wall/Data-MapDual/lib/Data/MapDual.rakumod
+**** /home/doom/End/Cave/DataMathRaku/Notes/notes-dualmap
