--- a/notes/meeting_2021jul11.org
+++ b/notes/meeting_2021jul11.org
@@ -14,7 +14,7 @@
 **** creating new entries of same type as old
 *** A subject for later I think: $^a $^b
 *** bruce dryrun of raku conference talk
-*** david perl utility
+*** david: has a perl utility he wants to talk about (next meeting?)
 *** bruce blog post perl weekly challenge
 **** swap nipples below 255
 **** numbering system 123, no adjacent 1s, what's 80th number
