--- a/notes/meeting_2021jul11.org
+++ b/notes/meeting_2021jul11.org
@@ -18,4 +18,4 @@
 *** bruce blog post perl weekly challenge
 **** swap nipples below 255
 **** numbering system 123, no adjacent 1s, what's 80th number
-
+**** <> "superflat" trickery
