--- a/notes/meeting_2021jul11.org
+++ b/notes/meeting_2021jul11.org
@@ -18,7 +18,7 @@
 **** relative path from program to other directory
 ***** /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021mar28/program_location.raku
 ***** Q: how to get that to work with "use lib"
-*** placeholder vars: $^a $^b (tried to cover it on the fly)
+*** DONE placeholder vars: $^a $^b 
 **** the old perl situation
 ***** https://fastapi.metacpan.org/source/PEVANS/Scalar-List-Utils-1.56/lib/List/Util.pm
 *** bruce dryrun of raku conference talk
