--- a/notes/meeting_2021jul24.org
+++ b/notes/meeting_2021jul24.org
@@ -1,3 +1,4 @@
 * meeting notes July 24, 2021
 ** special staturday session
 *** which we're commemorating with a complete lack of preparation
+** bill's discussion on an upcoming lightning talk
