--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -89,6 +89,13 @@ https://github.com/tadzik/File-Find
 ***** TODO (( link from mailing list ))
 **** TODO find (or open) issue: raku's perl5 regex compatibility (:P5) can't handle (?^i:
 ***** https://www.nntp.perl.org/group/perl.perl6.users/2021/05/msg9924.html
+***** https://github.com/rakudo/rakudo/issues/2624
+***** out:
+
+#+BEGIN_SRC text
+
+#END_SRC
+
 
 ** other topic ideas
 *** raku classes as data containers (joe brenner) 
