--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -101,11 +101,14 @@ compatible, third best would be to deprecate it and
 generate a warning when you try to use it.
 
 The absolute worst thing to do is what's currently
-being done: leaving a semi-broken feature lying
-around (and then when someone trips over it imply
-they're dumb for trying to use it).  
+being done: leaving a semi-broken feature lying around
+(and then when someone trips over it imply they're
+dumb for trying to use it).
 
 This issue has been open for over two years now. 
+
+
+
 
 #END_SRC
 
