--- a/notes/meeting_2021jun20.org
+++ b/notes/meeting_2021jun20.org
@@ -99,16 +99,14 @@ having trouble with the embedded pattern-match modifiers, e.g.
 
   m:P5/(?^i: ... )/
 
-My first preference would be to get :P5 working so
-that it's perfectly compatible with perl; second best
-would be to carefully document the ways it's not
-compatible; third best would be to deprecate it and
+My first preference would be to get :P5 working so that it's perfectly
+compatible with perl; second best would be to carefully document the
+ways it's not compatible; third best would be to deprecate it and
 generate a warning when you try to use it.
 
-The absolute worst thing to do is what's currently
-being done: leaving a semi-broken feature lying around
-(and then when someone trips over it imply they're
-dumb for trying to use it).
+The absolute worst thing to do is what's currently being done: leaving
+a semi-broken feature lying around (and then when someone trips over
+it imply they're dumb for trying to use it).
 
 This issue has been open for over two years now. 
 
