--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -1,3 +1,3 @@
 * meeting notes August 15, 2021
-** 
+** callbacks
 /home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021jul11/anonymous_routines_with_placeholder_variables.raku
