--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -1,6 +1,6 @@
 * meeting notes August 15, 2021
 ** callbacks
-*** aka the anonymous subs of perl5, lamdas of lisp and other cs nerd langs
+*** aka the "anonymous subs" of perl5, lambdas of lisp and other cs nerd langs
 https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/anonymous_routines_with_placeholder_variables.raku
 *** misc sub-topics:
 **** $code vs &code
