--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -3,7 +3,7 @@
 *** aka the "anonymous subs" of perl5, lambdas of lisp and other cs nerd langs
 https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/anonymous_routines_with_placeholder_variables.raku
 *** misc sub-topics:
-**** $code vs &code
+**** sigils: $code vs &code
 **** sub vs block
 ***** subs can use return
 **** placeholder vars idiom
