--- a/notes/meeting_2021aug15.org
+++ b/notes/meeting_2021aug15.org
@@ -8,3 +8,5 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/anonymous_routines
 ***** subs can use return
 **** placeholder vars idiom
 ***** use the hat just once (the condom convention)
+** .round arguments
+https://github.com/doomvox/raku-study/tree/main/bin/2021jul11/round_to_nearest_100.raku
